# SilentSedation

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yaml
back-end/: Cargo.toml  clean_rules.txt  device_data_insertion.txt
back-end/src/: main.rs
back-end/src/auth/: jwt.rs
back-end/src/communication/requests/: mod.rs
back-end/src/communication/responses/: mod.rs
back-end/src/constants/: mod.rs
back-end/src/database/: error_types.rs  mod.rs  user_data.rs
back-end/src/private/: mod.rs
back-end/src/requests/: mod.rs
back-end/src/responses/: mod.rs
back-end/src/services/: mod.rs
back-end/src/utils/: mod.rs
back-end/src/utils/deviceTypes/: mod.rs
back-end/src/utils/device_types/: mod.rs
back-end/user-back-end/: Cargo.toml
back-end/user-back-end/assets/: private-keys.json
back-end/user-back-end/src/: main.rs
back-end/user-back-end/src/auth/: jwt.rs
back-end/user-back-end/src/code_generator/: mod.rs
back-end/user-back-end/src/communication/requests/: mod.rs
back-end/user-back-end/src/constants/: mod.rs
back-end/user-back-end/src/database/: device_code_data.rs  device_data.rs  error_types.rs  mod.rs  user_data.rs
back-end/user-back-end/src/device_handing/: device_connection.rs  mod.rs
back-end/user-back-end/src/enums/: device_actions.rs  device_status.rs  mod.rs  web_status.rs
back-end/user-back-end/src/events/: device_events.rs  mod.rs
back-end/user-back-end/src/private/: mod.rs
back-end/user-back-end/src/services/: mod.rs
back-end/user-back-end/src/state/: mod.rs
back-end/user-back-end/src/utils/: mod.rs
(+49 files in other folders)
