[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
bson = "2.10.0"
tokio = { version="1.37.0", features=["full"] }