[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
bson = { version = "2.10.0", features=["chrono-0_4"] }
tokio = { version="1.37.0", features=["full"] }
env_logger="0.10.0"
rand="0.9.1"
chrono = "0.4"
futures = "0.3.31"
password-hash = "0.5.0"
argon2 = "0.5.3"
